--- a/manifest.json
+++ b/manifest.json
@@ -2,27 +2,20 @@
   "name": "SGlass",
   "description": "A premium glass-inspired Spotify theme featuring dynamic colors, liquid glass effects, and sleek animations.",
   "version": "1.0.0",
-  "author": "Sasuke MC",
-  "authors": ["Sasuke MC <contact@sasukemc.com>"],
+  "authors": [
+    { "name": "Sasuke MC", "url": "https://github.com/tu-usuario" }
+  ],
   "license": "MIT",
   "readme": "README.md",
+  "preview": "preview/theme.png",
+  "usercss": "user.css",
+  "userjs": "theme.js",
+  "schemeIni": "color.ini",
   "tags": ["glass", "liquid", "dynamic", "modern", "animation"],
   "usedColors": [
-    "text",
-    "subtext",
-    "main",
-    "sidebar",
-    "player",
-    "card",
-    "shadow",
-    "selected-row",
-    "button",
-    "button-active",
-    "button-disabled",
-    "tab-active",
-    "notification",
-    "notification-error",
-    "misc"
+    "text","subtext","main","sidebar","player","card","shadow","selected-row",
+    "button","button-active","button-disabled","tab-active","notification",
+    "notification-error","misc"
   ],
   "colorSchemes": {
     "auto": {
@@ -35,5 +28,5 @@
     }
   },
   "include": [],
-  "schemeIni": "color.ini"
+  "branch": "main"
 }
